--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,22 +1,22 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Fast-Weigh Documentation
+description: Fast-Weigh Help Center.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Help guides, tutorials, reference docs, and more.
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/logo-vert.svg
   actions:
-    - text: Example Guide
+    - text: Get started with Fast-Weigh
       link: /guides/example/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Go to web portal
+      link: https://portal.fast-weigh.com
       icon: external
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import { Card, CardGrid } from "@astrojs/starlight/components";
 
 ## Next steps
 
